--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html> 
 <html>
 <tittle> my website </tittle>
+  <nav>
+        <a href="#about" title="">About
+          <a href="https://coolors.co/ffcdb2-ffb4a2-e5989b-b5838d-6d6875"> </a>
+    </a>
+        <a href="#work" title="">Work Experience</a>
+        <a href="#education" title="">Education</a>
+        <a href="#contact" title="">Contact</a>
+      </nav>
 </head>
 <body>
 <h1> website </h1>
 </body>
+
+
