--- a/index.html
+++ b/index.html
@@ -84,15 +84,15 @@
     <h1 id="link3"><i class="fa fa-certificate" aria-hidden="true"></i> Work Training</h1>
     <article id="article5" class="background-secondary">
       <p class="primary-titles">Helen Woodward Animal Shelter <span class="location">| San Diego, CA</span></p>
-      <p class="category-details">date | Sales Booth </p>
+      <p class="category-details">9/10/18 | Sales Booth </p>
       <p class="category-description">  </p>
       
       <p class="primary-titles">Father Joe's Village <span class="location">| San Diego, CA</span></p>
       <p class="category-details">date | Food Server </p>
       <p class="category-description">            </p>
       
-      <p class="primary-titles"> <span class="location">| SomeCity, CA</span></p>
-      <p class="category-details">date | Someposition </p>
+      <p class="primary-titles"> SD Humane Society and SPCA<span class="location">| San Diego, CA</span></p>
+      <p class="category-details"> 10/17/14 | Animal Help </p>
       <p class="category-description">              </p>
             </div>
           </div>
@@ -149,6 +149,7 @@
 </main>
 
 </body>
+</html>
 <style>
 	@charset "utf-8";
 
