--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
         <article id="article1" class="background-secondary">
           <p class="date">Links to my Projects</p>
           <h3>
-            <a href="H:\Web Design\Websites\SweetBakeShop\bakerysite.htm">Sweet Bake Shop</a>
+            <a href="bakerysite.htm">Sweet Bake Shop</a>
           </h3>
           <h3>
-             <a href="H:\Web Design\Websites\loud music festival\clickherefirst.htm">Loud Music Festival</a>
+             <a href="clickherefirst.htm">Loud Music Festival</a>
           </h3>
            <h3>
               <a href=""></a>
