--- a/index.html
+++ b/index.html
@@ -14,13 +14,16 @@
 <header class="background-primary">
   <div class="row">
     <div class="col-1-3"> 
-      <img class="profile-img col-narrow" src="" alt="profile image"> </div>
-    <div class="col-1-3">
-      
-      <h1>Reshini Umesh</h1>
-      <h3></h3>
+      <img class="profile-img" src=""> 
     </div>
-    <div class="col-1-3"><img src="https://docs.google.com/drawings/d/e/2PACX-1vSpKKP_KKNJwS7qH-vG3Uzp6Pi8XCZJEWBDR9zqevBckAO_vXUc7BSAKgQfmCw29XuU7d_CsEJ9uNO0/pub?w=1440&h=1080"> </div>
+    <div class="col-1-3">
+      <h1>
+      <img src="https://docs.google.com/drawings/d/e/2PACX-1vTmtJzMR4ANSPTdnbkVx24jISV0JFfhJ7GOVPSB9c2Qf_afMKrNEIr_lOkawsdRsa2HncXa4B29FnjW/pub?w=1440&h=1080">        
+      </h1>
+    </div>
+    <div class="col-1-3">
+      <img src=""> 
+    </div>
   </div>
   <div class="row">
     <ul class="contact">
@@ -52,13 +55,13 @@
              <a href="H:\Web Design\Websites\loud music festival\clickherefirst.htm">Loud Music Festival</a>
           </h3>
            <h3>
-              <a href=""></a>
+              <a href="https://docs.google.com/drawings/d/e/2PACX-1vT-kSKDeBIDYy58AFXgHfeMhVPaMFVShh58TSXbuJYGzweuFjgmvpR8Pls0uVI006CXgHLc1gDhtHQP/pub?w=1440&h=1080">photoshop edited</a>
           </h3>
            <h3>
-              <a href=""></a>
+              <a href="https://media.giphy.com/media/MCuqWRnxvSQ5anne2z/giphy.gif">skull gif</a>
           </h3>
            <h3>
-              <a href=""></a>
+              <a href="https://media.giphy.com/media/RhBXUxulAktI1qujRn/giphy.gif">face gif </a>
           </h3>
            <h3>
               <a href=""></a>
