--- a/index.html
+++ b/index.html
@@ -13,16 +13,13 @@
 <body>
 <header class="background-primary">
   <div class="row">
-    <div class="col-1-3"> 
-      <img class="profile-img" src=""> 
-    </div>
+    <div class="col-1-3"><img src="https://media.giphy.com/media/htvH71s2At1XdnVdBd/giphy.gif"> </div>
     <div class="col-1-3">
-      <h1>
-      <img src="https://docs.google.com/drawings/d/e/2PACX-1vTmtJzMR4ANSPTdnbkVx24jISV0JFfhJ7GOVPSB9c2Qf_afMKrNEIr_lOkawsdRsa2HncXa4B29FnjW/pub?w=1440&h=1080">        
+      <h1> Reshini Umesh     
       </h1>
     </div>
     <div class="col-1-3">
-      <img src=""> 
+      <img src="https://media.giphy.com/media/Kebf6rg4o4s4VjiWwR/giphy.gif"> 
     </div>
   </div>
   <div class="row">
@@ -49,25 +46,23 @@
         <article id="article1" class="background-secondary">
           <p class="date">Links to my Projects</p>
           <h3>
-            <a href="bakerysite.htm">Sweet Bake Shop</a>
+            <a href="H:\Web Design\Websites\SweetBakeShop\bakerysite.htm">Sweet Bake Shop</a>
           </h3>
           <h3>
-             <a href="clickherefirst.htm">Loud Music Festival</a>
+             <a href="H:\Web Design\Websites\loud music festival\clickherefirst.htm">Loud Music Festival</a>
           </h3>
            <h3>
-              <a href="https://docs.google.com/drawings/d/e/2PACX-1vT-kSKDeBIDYy58AFXgHfeMhVPaMFVShh58TSXbuJYGzweuFjgmvpR8Pls0uVI006CXgHLc1gDhtHQP/pub?w=1440&h=1080">photoshop edited</a>
+              <a href=""> </a>
           </h3>
            <h3>
-              <a href="https://media.giphy.com/media/MCuqWRnxvSQ5anne2z/giphy.gif">skull gif</a>
+              <a href="https://docs.google.com/drawings/d/e/2PACX-1vS0BoTY-OpwZXr98zjseXI_qFfdgN4vnmUAUgeVn5qtIes0l4E_LreTrBv7uLIMuALgU6r-ksCW-6Fo/pub?w=1440&h=1080">photoshop</a>
           </h3>
            <h3>
-              <a href="https://media.giphy.com/media/RhBXUxulAktI1qujRn/giphy.gif">face gif </a>
+              <a href=""> </a>
           </h3>
            <h3>
               <a href=""></a>
           </h3>
-          
-          
         </article>
         <article id="article2" class="background-secondary">
           <p class="date">Extracurricular Activities / Hobbies / Interests</p>
@@ -171,7 +166,6 @@
 
 </body>
 </html>
-
 <style>
 	@charset "utf-8";
 
@@ -187,7 +181,7 @@ html {
 /*******/
 
 .background-primary {
-	background-color: #373430;
+  background-color: #373430;
 }
 .background-secondary {
 	background-color: #FFE2B7;
@@ -223,6 +217,10 @@ header {
 	color: #FFE2B7;
 	text-align: center;
 }
+header img {
+	max-width: 250px;
+	padding: 20px;
+}
 header .row {
 	display: flex;
 	flex-flow: row;
@@ -250,11 +248,6 @@ header h3 {
 	margin-top: 10px;
 	margin-bottom: 20px;
 }
-header img {
-	max-width: 150px;
-	padding: 10px;
- 
-}
 header .contact {
 	width: 45%;
 	margin: 5px auto;
@@ -267,7 +260,7 @@ header ul {
 }
 header li {
 	list-style-type: none;
-	margin: 15px;
+	margin: 20px;
 }
 @media (max-width: 48em) {
 	header .contact {
@@ -512,10 +505,7 @@ article {
 .circles {
 	color: #835B1B;
 }
-.profile-img {
-  border-radius: 50%;
-  width: 200px;    
-}
+
 </style>
 </body>
 </html>
