--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <a href="https://reshiniumesh.github.io/Sweet-Bake-Shop/">Sweet Bake Shop</a>
           </h3>
           <h3>
-             <a href="H:\Web Design\Websites\loud music festival\clickherefirst.htm">Loud Music Festival</a>
+             <a href="">Loud Music Festival</a>
           </h3>
            <h3>
               <a href=""> </a>
