--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 <body>
 <header class="background-primary">
   <div class="row">
-    <div class="col-1-3"><img src="https://media.giphy.com/media/htvH71s2At1XdnVdBd/giphy.gif"> </div>
     <div class="col-1-3">
-      <h1> Reshini Umesh     
-      </h1>
+	    <img src="https://media.giphy.com/media/htvH71s2At1XdnVdBd/giphy.gif"> 
+	  </div>
+    <div class="col-1-3">
+      <h1> Reshini Umesh </h1>
     </div>
     <div class="col-1-3">
       <img src="https://media.giphy.com/media/Kebf6rg4o4s4VjiWwR/giphy.gif"> 
@@ -40,7 +41,8 @@
 <main>
   <section id="section1" class="background-tertiary">
     <div class="row">
-      <div class="col-1-9"></div>
+      <div class="col-1-9">
+	    </div>
       <div class="col-1-3">
         <h1 id="link1"><i class="fa fa-briefcase" aria-hidden="true"></i> About Me</h1>
         <article id="article1" class="background-secondary">
