--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
             <a href="https://reshiniumesh.github.io/Sweet-Bake-Shop/">Sweet Bake Shop</a>
           </h3>
           <h3>
-             <a href="">Loud Music Festival</a>
+             <a href="https://reshiniumesh.github.io/click-here-first/">Loud Music Festival</a>
           </h3>
            <h3>
-              <a href=""> </a>
+              <a href="https://reshiniumesh.github.io/F22-Store/."> F22 Clothing Store </a>
           </h3>
            <h3>
               <a href="https://docs.google.com/drawings/d/e/2PACX-1vS0BoTY-OpwZXr98zjseXI_qFfdgN4vnmUAUgeVn5qtIes0l4E_LreTrBv7uLIMuALgU6r-ksCW-6Fo/pub?w=1440&h=1080">photoshop</a>
