--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </ul>
 </nav>
 <main>
-  <section id="section1" class="background-tertiary">
+ <section id="section1" class="background-tertiary">
     <div class="row">
       <div class="col-1-9">
 	    </div>
@@ -50,15 +50,32 @@
           <h3>
             <a href="https://reshiniumesh.github.io/Sweet-Bake-Shop/">Sweet Bake Shop</a>
           </h3>
+          <h4>         
+             <p class="date">2/14/19</p> 
+           This is a fake bakery shop website that I created individually for my web design class. I liked creating this because I got to experience the challenges of making different pages on one website and learning how to incorporate new elements onto this webpage.
+          </h4>
           <h3>
              <a href="https://reshiniumesh.github.io/click-here-first/">Loud Music Festival</a>
           </h3>
+          <h4>           
+            <p class="date">3/18/19</p> 
+           This is a website I individually created for my web design class. I had a lot of fun creating this because I got to learn how to link to other pages and make it more appealing to look at.          
+          </h4>
            <h3>
               <a href="https://reshiniumesh.github.io/F22-Store/."> F22 Clothing Store </a>
           </h3>
+          <h4>     
+             <p class="date">4/10/19</p> 
+           This was a fake clothing store I individually created for my web design class. I copied many of the pictures from the actual F21 store so I learned how to use "free and fair use".
+          </h4>
            <h3>
               <a href="https://docs.google.com/drawings/d/e/2PACX-1vS0BoTY-OpwZXr98zjseXI_qFfdgN4vnmUAUgeVn5qtIes0l4E_LreTrBv7uLIMuALgU6r-ksCW-6Fo/pub?w=1440&h=1080">photoshop</a>
           </h3>
+          <h4>
+            name of the course (if done for a class)
+             <p class="date">3/18/19</p> 
+            approximate date of the content, brief description of the project, your specific role, what you’re displaying or what you’ve learned, highlight of teamwork / leadership skills exemplified, challenges you may have overcome
+          </h4>
         </article>
         <article id="article2" class="background-secondary">
           <p class="date">Extracurricular Activities / Hobbies / Interests</p>
@@ -79,6 +96,7 @@
           <h4>Future College Majors </h4>
           <br>
           <h4>Business, Marketing</h4>
+          <p class="date">I've planned to go into Marketing, more specifically Advertising, because I feel like I have a good eye for what other people want and how to portray it. I also think I pretty good creative side.</p> 
         </article>
         <article id="article4" class="background-secondary">
           <p class="date">Relevent Coursework</p>
