--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 <link rel="shortcut icon" href="../../../images/favicon_sk.ico">
 <link href="css/style_resume.css" rel="stylesheet" type="text/css">
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
+<link rel = "stylesheet" href = "css/main.css">
+<link rel = "stylesheet" href = "css/responsive.css" media = "screen and (max-width: 1000px)">
+	
 <script src="https://use.typekit.net/xgu2cay.js"></script>
 <script>try{Typekit.load({ async: true });}catch(e){}</script>
 </head>
