--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
 <body>
 <header class="background-primary">
   <div class="row">
+    <div class="col-1-3"><img src=""> </div>
     <div class="col-1-3">
-	    <img src="https://media.giphy.com/media/htvH71s2At1XdnVdBd/giphy.gif"> 
-	  </div>
-    <div class="col-1-3">
-      <h1> Reshini Umesh </h1>
+      <h1> Reshini Umesh     
+      </h1>
     </div>
     <div class="col-1-3">
-      <img src="https://media.giphy.com/media/Kebf6rg4o4s4VjiWwR/giphy.gif"> 
+      <img src=""> 
     </div>
   </div>
   <div class="row">
@@ -39,11 +38,11 @@
   </ul>
 </nav>
 <main>
- <section id="section1" class="background-tertiary">
+  <section id="section1" class="background-tertiary">
     <div class="row">
       <div class="col-1-9">
 	    </div>
-      <div class="col-1-3">
+      <div class="col-2-3">
         <h1 id="link1"><i class="fa fa-briefcase" aria-hidden="true"></i> About Me</h1>
         <article id="article1" class="background-secondary">
           <p class="date">Links to my Projects</p>
@@ -69,12 +68,15 @@
            This was a fake clothing store I individually created for my web design class. I copied many of the pictures from the actual F21 store so I learned how to use "free and fair use".
           </h4>
            <h3>
-              <a href="https://docs.google.com/drawings/d/e/2PACX-1vS0BoTY-OpwZXr98zjseXI_qFfdgN4vnmUAUgeVn5qtIes0l4E_LreTrBv7uLIMuALgU6r-ksCW-6Fo/pub?w=1440&h=1080">photoshop</a>
+              <a href="https://docs.google.com/drawings/d/e/2PACX-1vS0BoTY-OpwZXr98zjseXI_qFfdgN4vnmUAUgeVn5qtIes0l4E_LreTrBv7uLIMuALgU6r-ksCW-6Fo/pub?w=1440&h=1080"> photography</a>
+             <br>
+             <a href="https://media.giphy.com/media/htvH71s2At1XdnVdBd/giphy.gif">photoshop1</a>
+             <br>
+               <a href="https://media.giphy.com/media/Kebf6rg4o4s4VjiWwR/giphy.gif">photoshop2</a>
           </h3>
           <h4>
-            name of the course (if done for a class)
-             <p class="date">3/18/19</p> 
-            approximate date of the content, brief description of the project, your specific role, what you’re displaying or what you’ve learned, highlight of teamwork / leadership skills exemplified, challenges you may have overcome
+             <p class="date">Done on Different Dates</p> 
+            These are some of the photos I have taken just for fun and also some pictures I edited. I like to take pictues of my friends and family for fun and I used to take some pictures for my photography class.
           </h4>
         </article>
         <article id="article2" class="background-secondary">
@@ -86,9 +88,7 @@
            <h3>Girl Scouts</h3>
           <h4>Finishing Gold Award</h4>
         </article>
-      </div>
-   
-      <div class="col-1-3">
+ 
         <h1 id="link2"><i class="fa fa-graduation-cap" aria-hidden="true"></i> Education</h1>
         <article id="article3" class="background-secondary">
           <p class="date">Graduate in 2020</p>
@@ -96,7 +96,7 @@
           <h4>Future College Majors </h4>
           <br>
           <h4>Business, Marketing</h4>
-          <p class="date">I've planned to go into Marketing, more specifically Advertising, because I feel like I have a good eye for what other people want and how to portray it. I also think I pretty good creative side.</p> 
+          <p class="date"> I've planned to go into Marketing, more specifically Advertising, because I feel like I have a good eye for what other people want and how to portray it. I also think I pretty good creative side.</p> 
         </article>
         <article id="article4" class="background-secondary">
           <p class="date">Relevent Coursework</p>
@@ -106,8 +106,9 @@
           <h3>Drawing and Painting</h3>
         </article>
       </div>
-      <div class="col-1-9"></div>
     </div>
+      <div class="col-1-9"></div>
+  </div>
   </section>
   <section id="section2" class="background-tertiary">
    <div class="row">
@@ -179,6 +180,8 @@
 </main>
 
 </body>
+</html>
+
 <style>
 	@charset "utf-8";
 
@@ -357,7 +360,7 @@ section h1 {
 @media (min-width: 48em) {
 #section1 .row {
 	width: 90%;
-	margin: 0px auto;
+	margin: 1px auto;
 }
 #section1 h1 {
 	text-align: center;
@@ -398,8 +401,8 @@ article {
 }
 
 @media (min-width: 48em) {
-#article1, #article2 {
-	text-align: right;
+#article1, #article2, #article3, #article4 {
+	text-align: center;
 }
 #article1 {
 	margin-top: 20px;
@@ -413,7 +416,7 @@ article {
   min-height: 200px;
 }
 #article4 {
-	min-height: 230px;
+	min-height: 20px;
 }
 }
 #article5 p {
@@ -520,4 +523,4 @@ article {
 }
 
 </style>
-</html>
+
