--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
 <header class="background-primary">
   <div class="row">
-    <div class="col-1-3"><img src=""> </div>
+    <div class="col-1-3">
+      <img src=""> 
+    </div>
     <div class="col-1-3">
       <h1> Reshini Umesh     
       </h1>
@@ -42,7 +44,7 @@
     <div class="row">
       <div class="col-1-9">
 	    </div>
-      <div class="col-2-3">
+      <div class="col-1-3">
         <h1 id="link1"><i class="fa fa-briefcase" aria-hidden="true"></i> About Me</h1>
         <article id="article1" class="background-secondary">
           <p class="date">Links to my Projects</p>
@@ -88,7 +90,8 @@
            <h3>Girl Scouts</h3>
           <h4>Finishing Gold Award</h4>
         </article>
- 
+      </div>
+     <div class="col-1-3">
         <h1 id="link2"><i class="fa fa-graduation-cap" aria-hidden="true"></i> Education</h1>
         <article id="article3" class="background-secondary">
           <p class="date">Graduate in 2020</p>
