--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           </h3>
           <h4>
              <p class="date">Done on Different Dates</p> 
-            These are some of the photos I have taken just for fun and also some pictures I edited. I like to take pictues of my friends and family for fun and I used to take some pictures for my photography class.
+            These are some of the photos I have taken just for fun and also some pictures I edited and posted online so it would be availabe to the public. I like to take pictues of my friends and family for fun and I used to take some pictures for my photography class.
           </h4>
         </article>
         <article id="article2" class="background-secondary">
