--- a/index.html
+++ b/index.html
@@ -70,15 +70,12 @@
            This was a fake clothing store I individually created for my web design class. I copied many of the pictures from the actual F21 store so I learned how to use "free and fair use".
           </h4>
            <h3>
-              <a href="https://docs.google.com/drawings/d/e/2PACX-1vS0BoTY-OpwZXr98zjseXI_qFfdgN4vnmUAUgeVn5qtIes0l4E_LreTrBv7uLIMuALgU6r-ksCW-6Fo/pub?w=1440&h=1080"> photography</a>
+              <a href="https://drive.google.com/drive/folders/1LiE1QACw4CCutbyBylz4RB3RCozSVjUV?usp=sharing"> Photography</a>
              <br>
-             <a href="https://media.giphy.com/media/htvH71s2At1XdnVdBd/giphy.gif">photoshop1</a>
-             <br>
-               <a href="https://media.giphy.com/media/Kebf6rg4o4s4VjiWwR/giphy.gif">photoshop2</a>
           </h3>
           <h4>
              <p class="date">Done on Different Dates</p> 
-            These are some of the photos I have taken just for fun and also some pictures I edited and posted online so it would be availabe to the public. I like to take pictues of my friends and family for fun and I used to take some pictures for my photography class.
+            These are some of the photos I have taken just for fun with friends and family. There are also some pictures of places I have visited such as Santa Monica Pier, Wonderspaces Museum and Kruger National Park in South Africa.
           </h4>
         </article>
         <article id="article2" class="background-secondary">
