--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
           </h3>
           <h4>
              <p class="date">Done on Different Dates</p> 
-            These are some of the photos I have taken just for fun with friends and family. There are also some pictures of places I have visited such as Santa Monica Pier, Wonderspaces Museum and Kruger National Park in South Africa.
+                        These are some of the photos I have taken just for fun with friends and family. There are also some pictures of places I have visited such as Santa Monica Pier, Wonderspaces Museum and Kruger National Park in South Africa.
+
           </h4>
         </article>
         <article id="article2" class="background-secondary">
@@ -178,6 +179,10 @@
     </div>
   </section>
 </main>
+
+<footer class="background-primary">   
+  <p id="copyright">© SamKGo</p>
+</footer>
 
 </body>
 </html>
@@ -522,5 +527,22 @@ article {
 	color: #835B1B;
 }
 
+footer {
+	color: #FFE1B7;
+	text-align: center;
+	display: flex;
+	flex-flow: row;
+	justify-content: space-between;
+	align-items: center;
+}
+@media (max-width: 48em) {
+	footer {
+		flex-flow: column;
+		justify-content: center;
+	}
+}
+footer p {
+	margin-left: 600px;
+}
 </style>
 
